Fix TrueDark GTK3 for accessiblity and accuracy
Some of the changes listed include:
- Proper display of checked buttons and toolbar buttons
- More accurate replication of showing focus like it was in GTK2
- Fix for the background of combobox item hover color (still need to fix
  foreground text)
- Flipping some of the gradient midpoints around
- Rounding of the troughs
- Correcting the border for the scrollbars

--- a/templates/TrueDark/gtk-3.0/gtk-widgets.css
+++ b/templates/TrueDark/gtk-3.0/gtk-widgets.css
@@ -9,6 +9,9 @@
  * You can use all style properties defined for any of the class
  * members in the class rules. These properties can be found in
  * 'Template\Widgets\WidgetName.css'.
+ *
+ * alt reference:
+ * https://git.gnome.org/browse/gtk+/tree/gtk/theme/Adwaita/gtk-contained.css?id=48e543fbc88e753a1a496248eaa7f83b5722de86
  */
  
 *
@@ -192,25 +195,26 @@ column-header .button * {
 
 .slider {
 	trough-border: 1;
-	slider-width: 13;
+	slider-width: 9;
 	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color,1.2)), 
-												color-stop(0.50,shade(@background-color,1.3)), 
-												color-stop(0.51,shade(@background-color,1.5)), 
+												color-stop(0.50,shade(@background-color,1.5)), 
+												color-stop(0.51,shade(@background-color,1.3)), 
 												color-stop(1.00,shade(@background-color,1.2)));
 	/* Members: GtkScale, GtkScrollbar. */
 }
 
 .scrollbar.slider {
+	border-color: shade(@entryselbg-color, 1.8);
 	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@entryselbg-color,0.7)), 
-												color-stop(0.50,shade(@entryselbg-color,0.8)), 
-												color-stop(0.51,shade(@entryselbg-color,1.0)), 
+												color-stop(0.50,shade(@entryselbg-color,1.0)), 
+												color-stop(0.51,shade(@entryselbg-color,0.8)), 
 												color-stop(1.00,shade(@entryselbg-color,0.7)));
 }
 
 .scrollbar.slider.vertical {
 	background: -gtk-gradient(linear, 0 0, 1 0, color-stop(0.0,shade(@entryselbg-color,0.7)), 
-												color-stop(0.50,shade(@entryselbg-color,0.8)), 
-												color-stop(0.51,shade(@entryselbg-color,1.0)), 
+												color-stop(0.50,shade(@entryselbg-color,1.0)), 
+												color-stop(0.51,shade(@entryselbg-color,0.8)), 
 												color-stop(1.00,shade(@entryselbg-color,0.7)));
 }
 
@@ -230,7 +234,7 @@ GtkFrame
 }
 
 .notebook tab {
-	border: 1px solid shade(@background-color,1.5);
+	border-top: 1px solid shade(@background-color,1.5);
 	padding: 3px 2px;
 }
 
@@ -252,6 +256,8 @@ GtkFrame
 	/* Members: GtkProgressBar, GtkScale, GtkScrollbar. */
 	background:shade(@background-color, 0.75);
 	border: 1px solid shade(@background-color, 0.5);
+	margin: 5px;
+	border-radius: 4px;
 }
 
 .scale.trough.highlight.left, .scale.trough.highlight.right
@@ -291,13 +297,32 @@ GtkFrame
 }
 
 .button, .slider, .notebook tab:active {
-	border: 1px solid shade(@background-color,2.0);
-	padding: 3px 2px;
+	border: 1px solid shade(@background-color,3.6);
+	padding: 4px 3px;
 	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color,1.2)), 
-												color-stop(0.50,shade(@background-color,1.3)), 
-												color-stop(0.51,shade(@background-color,1.5)), 
-												color-stop(1.00,shade(@background-color,1.2)));
+												color-stop(0.50,shade(@background-color,1.5)), 
+												color-stop(0.51,shade(@background-color,1.2)), 
+												color-stop(1.00,shade(@background-color,1.3)));
 	/* Members: GtkCheckButton, GtkRadioButton, GtkButton, GtkToggleButton. */
+}
+
+.button:checked
+{
+	border: 1px solid shade(@background-color, 0.5);
+	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color,1.0)), 
+												color-stop(0.50,shade(@background-color,1.3)), 
+												color-stop(0.51,shade(@background-color,1.0)), 
+												color-stop(1.00,shade(@background-color,1.1)));
+}
+
+.toolbar .button:checked
+{
+	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0, shade(mix(@background-color, @entryselbg-color, 0.9),1.0)), 
+	                                            color-stop(0.50,shade(mix(@background-color, @entryselbg-color, 0.9),1.3)), 
+	                                            color-stop(0.51,shade(mix(@background-color, @entryselbg-color, 0.9),1.0)), 
+	                                            color-stop(1.00,shade(mix(@background-color, @entryselbg-color, 0.9),1.1)));
+	border: 1px solid shade(@entryselbg-color, 0.5);
+	color: @entryselfg-color;
 }
 
 .notebook tab.top:active {
@@ -322,13 +347,27 @@ GtkFrame
 	/* Members: GtkCheckButton, GtkRadioButton, GtkButton, GtkToggleButton. */
 }
 
-.button:focus
+.button:focus > *
 {
-	border-color: shade(@entryfg-color, 0.9);
+	background: alpha(shade(@entryselbg-color, 0.5), 0.4);
+	border: 1px solid shade(@entryselbg-color, 0.9);
+	color: @entryselfg-color !important;
 }
 
 .button:hover {
-	border: 1px solid shade(@background-color, 2.4);
+	border: 1px solid shade(@background-color, 5.4);
+	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color, 1.7)), 
+												color-stop(0.50,shade(@background-color,2.0)), 
+												color-stop(0.51,shade(@background-color,1.7)), 
+												color-stop(1.00,shade(@background-color,1.8)));
+}
+
+.toolbar .button:hover {
+	border: 1px solid mix(@entryselbg-color, #bbbbbb, 0.3);
+	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@entryselbg-color, 0.5)), 
+												color-stop(0.50,shade(@entryselbg-color,0.8)), 
+												color-stop(0.51,shade(@entryselbg-color,0.5)), 
+												color-stop(1.00,shade(@entryselbg-color,0.6)));
 }
 
 GtkLinkButton * {
@@ -342,6 +381,8 @@ GtkLinkButton * {
 												color-stop(0.50,shade(@entryselbg-color,1.1)), 
 												color-stop(0.51,shade(@entryselbg-color,1.4)), 
 												color-stop(1.00,shade(@entryselbg-color,1.0)));
+	border-radius: 4px;
+	border: 1px solid shade(@background-color, 0.5);
 	color: @entryselfg-color;
 }
 .progressbar.vertical {
@@ -405,7 +446,7 @@ GtkTextView, .entry {
 }
 
 GtkTextView:focused, .entry:focused {
-	border: 1px solid shade(@entrybg-color, 1.7);
+	border: 1px solid shade(@entryselbg-color, 0.7);
 }
 
 .entry:insensitive {
@@ -421,7 +462,9 @@ GtkTextView:focused, .entry:focused {
 GtkComboBox .button * {
 	background: none;
 }
-
+GtkComboBox * {
+	background: none;
+}
 
 /*
  * Imports for widget-specific theming.
